--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<body>
+    <body>
 
-<h1>Test</h1>
-<p>My first paragraph.</p>
+        <h1>Test</h1>
+        <p>Testing first commit</p>
 
-</body>
+    </body>
 </html>
