hide modal forgot xd

--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@ html, body {
             });
 
             $(document).mouseenter(function () {
-                //$('.modal-backdrop').remove(); //fix multiple backdrops
-                //$('#myModal').modal('hide');
+                $('.modal-backdrop').remove(); //fix multiple backdrops
+                $('#myModal').modal('hide');
             });
             
         </script>
