--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@ html, body {
         font-size: 0.7em;
     }
 }
+
+.modal-content {
+    border: 5px solid #00f4d9;
+}
 	</style>
 	
 	</head>
@@ -258,8 +262,8 @@ html, body {
             });
 
             $(document).mouseenter(function () {
-                $('.modal-backdrop').remove(); //fix multiple backdrops
-                $('#myModal').modal('hide');
+                //$('.modal-backdrop').remove(); //fix multiple backdrops
+                //$('#myModal').modal('hide');
             });
             
             particlesJS.load('particles-js', '/particles.json', function() {
