--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@ html, body {
             });
 
             $(document).mouseenter(function () {
-                //$('.modal-backdrop').remove(); //fix multiple backdrops
-                //$('#myModal').modal('hide');
+                $('.modal-backdrop').remove(); //fix multiple backdrops
+                $('#myModal').modal('hide');
             });
             
             particlesJS.load('particles-js', '/particles.json', function() {
