check avatar add twitter

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ html, body {
                         		</li>
                         		<li class="demin-social-item">
                                             <a href="https://www.linkedin.com/in/victordemin/" target="_blank" data-toggle="tooltip"
-                                                data-placement="top" title="Follow me on Linkedin">
+                                                data-placement="top" title="Connect me on Linkedin">
                                                 <span class="fa-stack fa-lg">
                                                     <i class="fa fa-circle fa-stack-2x circle-icon"></i>
                                                     <i class="fa fa-linkedin fa-stack-1x network-icon"></i>
@@ -182,7 +182,7 @@ html, body {
                         		</li>
                         		<li class="demin-social-item">
                                             <a href="https://www.facebook.com/ruskid" target="_blank" data-toggle="tooltip"
-                                                data-placement="top" title="Follow me on Facebook">
+                                                data-placement="top" title="Add me on Facebook">
                                                 <span class="fa-stack fa-lg">
                                                     <i class="fa fa-circle fa-stack-2x circle-icon"></i>
                                                     <i class="fa fa-facebook fa-stack-1x network-icon"></i>
@@ -204,6 +204,15 @@ html, body {
                                                 <span class="fa-stack fa-lg">
                                                     <i class="fa fa-circle fa-stack-2x circle-icon"></i>
                                                     <i class="fa fa-map fa-stack-1x network-icon"></i>
+                                                </span>
+                                            </a>
+                        		</li>
+                        		<li class="demin-social-item">
+                                            <a href="https://twitter.com/VictorDemin" target="_blank" data-toggle="tooltip"
+                                                data-placement="top" title="Follow me on Twitter">
+                                                <span class="fa-stack fa-lg">
+                                                    <i class="fa fa-circle fa-stack-2x circle-icon"></i>
+                                                    <i class="fa fa-twitter fa-stack-1x network-icon"></i>
                                                 </span>
                                             </a>
                         		</li>
