--- a/index.html
+++ b/index.html
@@ -182,7 +182,17 @@
         margin: 0;
         height: 100%;
         width: 100%;
-        padding: 10px 20px;
+    }
+}
+
+
+@media only screen and (max-width: 400px) {
+    .demin-summary {
+        left: -5px;
+    }
+    
+    .demin-extra-info {
+        left: 0px;
     }
 }
 
