--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                         <div class="demin-name-container">
                             <h1 class="demin-name">Victor Demin</h1>
                 
-                                <p class="demin-summary">I am a Full Stack Developer and Entrepreneur interested in remote jobs and opportunities to build something useful and great. I primary reside in Spain, Barcelona and travel often.</p>
+                                <p class="demin-summary">I am a Full Stack Developer and Entrepreneur interested in remote jobs and opportunities to build something useful and great. My primary residence is in Barcelona but I travel often.</p>
                 
                                 <p class="demin-extra-info">Check out <a href='https://trabeja.com/' target='_blank'>Trabeja.com</a></p>
                         </div>
