--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                                 <p class="demin-summary">
                                     I am a Web Developer, Father and
                                     <a data-toggle="tooltip" data-title="I can't spell this word">Entrepreneur</a>.
-                                    Moscow 🇷🇺 Barcelona 🇪🇸 Georgia 🇬🇪
+                                    Moscow 🇷🇺 Barcelona 🇪🇸 Georgia 🇬🇪 Libertarian 🐍 ₿
                                 </p>
 
                             <p class="demin-academator-info"><a href='https://academator.com/' target='_blank'>Academator.com</a></p>
