--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                 $('.gif-image').hide();
                 $('.gif-image-' + count).show();
 
-                //$('#myModal').modal('show');
+                $('#myModal').modal('show');
             });
 
             $(document).mouseenter(function () {
